# Memory-Mapping-Visualization

./: .gitignore  CMakeLists.txt  README.md  contention.json  history.md  performance_report.md  serialization.json
bench/: bench_allocator.cpp  bench_contention.cpp  bench_multithreaded.cpp  bench_scalability.cpp  bench_serialization.cpp  bench_throughput.cpp
build-asan/: CTestTestfile.cmake  memory_mapper_tests[1]_include.cmake  memory_mapper_tests[1]_tests.cmake
build-rel/: CTestTestfile.cmake  cmake_test_discovery_f1ea3aea83.json  memory_mapper  memory_mapper_bench  memory_mapper_bench_contention  memory_mapper_bench_multithreaded  memory_mapper_bench_scalability  memory_mapper_bench_serialization  memory_mapper_bench_throughput  memory_mapper_tests  memory_mapper_tests[1]_include.cmake  memory_mapper_tests[1]_tests.cmake  server_sim  stress_test_arena
build-rel/web/: app.js
build-tsan/: CTestTestfile.cmake  memory_mapper_bench  memory_mapper_bench_scalability  memory_mapper_tests[1]_include.cmake  memory_mapper_tests[1]_tests.cmake
build-tsan/web/: index.html  style.css
build-ubsan/: CTestTestfile.cmake  memory_mapper_tests[1]_include.cmake  memory_mapper_tests[1]_tests.cmake
cmake/: Sanitizers.cmake
src/: main.cpp
src/allocator/: arena.cpp  arena.hpp  free_list.cpp  free_list.hpp  tracked_resource.cpp  tracked_resource.hpp
src/interface/: cache_analyzer.cpp  cache_analyzer.hpp  padding_inspector.hpp  visualization_arena.cpp  visualization_arena.hpp
src/serialization/: json_serializer.hpp
src/server/: ws_server.cpp  ws_server.hpp
src/simulation/: metrics.hpp  request_generator.cpp  request_generator.hpp  server_sim.cpp  server_sim.hpp  sim_main.cpp
src/tracker/: block_metadata.hpp  tracker.cpp  tracker.hpp
tests/: stress_test_arena.cpp  test_arena.cpp  test_cache_analyzer.cpp  test_context_switch.cpp  test_context_switch_snippet.cpp  test_free_list.cpp  test_ring_buffer.cpp  test_tracker.cpp  test_visualization_arena.cpp
tests/e2e/: e2e_test.py
tools/: capacity_report.sh  load_tester.py
web/: app.js
